@@ -34,5 +34,5 @@ The options available are:
     
         ${next.body()}
         
-        # rest of template
+        ## rest of template
     
